--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
+
+    <!-- Primary Meta Tags -->
+    <title>Siblings Comedy</title>
+    <meta name="title" content="Siblings Comedy">
+    <meta name="description" content="Character comedians and IRL sisters made up of Maddy and Marina Bye.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://siblingscomedy.com/">
+    <meta property="og:title" content="Siblings Comedy">
+    <meta property="og:description" content="Character comedians and IRL sisters made up of Maddy and Marina Bye.">
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="http://siblingscomedy.com/">
+    <meta property="twitter:title" content="Siblings Comedy">
+    <meta property="twitter:description" content="Character comedians and IRL sisters made up of Maddy and Marina Bye.">
+    <meta property="twitter:image" content="">
+
+
     <style>
 
 @font-face {
@@ -64,7 +85,9 @@ h3{
   margin-top: -30px;
 }
 
-
+.strapline {
+  width: 55%;
+}
 
 .carousel-control-prev, .carousel-control-next {
     width: 5%;
@@ -95,7 +118,7 @@ img{
     <div class="row h-75 titleStraplineContainer">
       <div class="my-auto pl-5 mx-5">
         <h1 class='title'></h1>
-        <h3 class='strapline w-50'></h3>
+        <h3 class='strapline'></h3>
         <div class='button'></div>
       </div>
    </div>
