--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ img{
         $('.page'+ int).show();
         
         // adjust background to not get weird gradient issues
-        $('body').css({'height':'100%'});
+        // $('body').css({'height':'100%'});
       }
 
       function goHome(){
