aug 21st update

--- a/index.html
+++ b/index.html
@@ -1,32 +1,88 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Siblings Comedy</title>
-  <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="css/curtain.css">
-  <link rel="stylesheet" href="css/text-effect.css">
-  <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Siblings Comedy</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/curtain.css">
+    <link rel="stylesheet" href="css/text-effect.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
+
 <body>
 
     <style>
-
         @font-face {
-          font-family: siblings;
-          src: url(css/siblings.ttf);
-        } 
-
-</style>
+            font-family: siblings;
+            src: url(css/siblings.ttf);
+        }
+    </style>
 
     <div class="content">
-        <div class="animate__animated animate__bounceInDown">
-            <h1 class="animated-stripes">Website coming soon</h1>
-        </div>
+        <section>
+            <div class="animate__animated animate__bounceInDown">
+                <h1 class="animated-stripes siblings">Siblings and Family Friends</h1>
+                </div>
+                
+                <h5 class="animated-stripes">21st August 2024</h5>
+            <div>
+                <p>
+                    A wild and wonderful variety night hosted by character comedians and IRL sisters Maddy and Marina
+                    Bye of critically acclaimed Siblings, starring their family friends 
+                    <i>
+                        (who happen to be the best comedians at the Fringe).
+                    </i>
+                </p>
+                <button class="siblings">
+                    Get Tickets 
+                </button>
+                <div class="animate__animated animate__bounceInUp">
+                <p>
+                    Expect stand-up, clowning, sketch-comedy, drag, dance and more in these three exclusive nights.
+                </p>
+                <p>
+                    Winner: Brighton Fringe Best Show Award 2021.
+                    Nominee: Comedian's Choice Award 2022, 
+                    <b>
+                        British Comedy Guide.
+                    </b>
+                </p>
+                <p>
+                    'This variety show was shocking, hilarious, bizarre and one of the funniest shows I have seen'
+                    <b>
+                        BroadwayBaby
+                    </b>
+                </p>
+                <p>
+                    'Ferociously funny' 
+                    <b>
+                        Guardian
+                    </b>
+                </p>
+                <p>
+                    'A kaleidoscopic fever dream' 
+                    <b>
+                        Entertainment-Focus    
+                    </b>
+                </p>
+                <p>
+                    'Natural-born comedians' 
+                    <b>
+                        Metro
+                    </b>
+                </p>
+                <p>
+                    ★★★★ 
+                    <b>
+                        Telegraph
+                    </b>
+                </p>
+            </div>
+            </div>
+        </section>
     </div>
 </body>
+
 </html>
