link to ticket site

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
                         (who happen to be the best comedians at the Fringe).
                     </i>
                 </p>
+                <a href="https://www.pleasance.co.uk/event/siblings-and-family-friends">
                 <button class="siblings">
                     Get Tickets 
                 </button>
+            </a>
                 <div class="animate__animated animate__bounceInUp">
                 <p>
                     Expect stand-up, clowning, sketch-comedy, drag, dance and more in these three exclusive nights.
