--- a/index.html
+++ b/index.html
@@ -20,71 +20,50 @@
         }
     </style>
 
-    <div class="content">
-        <section>
-            <div class="animate__animated animate__bounceInDown">
-                <h1 class="animated-stripes siblings">Siblings and Family Friends</h1>
-                </div>
-                
-                <h5 class="animated-stripes">21st August 2024</h5>
-            <div>
-                <p>
-                    A wild and wonderful variety night hosted by character comedians and IRL sisters Maddy and Marina
-                    Bye of critically acclaimed Siblings, starring their family friends 
-                    <i>
-                        (who happen to be the best comedians at the Fringe).
-                    </i>
-                </p>
-                <a href="https://www.pleasance.co.uk/event/siblings-and-family-friends">
-                <button class="siblings">
-                    Get Tickets 
-                </button>
-            </a>
-                <div class="animate__animated animate__bounceInUp">
-                <p>
-                    Expect stand-up, clowning, sketch-comedy, drag, dance and more in these three exclusive nights.
-                </p>
-                <p>
-                    Winner: Brighton Fringe Best Show Award 2021.
-                    Nominee: Comedian's Choice Award 2022, 
-                    <b>
-                        British Comedy Guide.
-                    </b>
-                </p>
-                <p>
-                    'This variety show was shocking, hilarious, bizarre and one of the funniest shows I have seen'
-                    <b>
-                        BroadwayBaby
-                    </b>
-                </p>
-                <p>
-                    'Ferociously funny' 
-                    <b>
-                        Guardian
-                    </b>
-                </p>
-                <p>
-                    'A kaleidoscopic fever dream' 
-                    <b>
-                        Entertainment-Focus    
-                    </b>
-                </p>
-                <p>
-                    'Natural-born comedians' 
-                    <b>
-                        Metro
-                    </b>
-                </p>
-                <p>
-                    ★★★★ 
-                    <b>
-                        Telegraph
-                    </b>
-                </p>
-            </div>
-            </div>
-        </section>
+    <div class="main-content">
+        <div class="hero-section">
+            <img src="img/siblings-logo.png" alt="Siblings Logo" class="dancing-logo">
+        </div>
+
+        <div class="girls-section">
+            <img src="img/girls.png" alt="Siblings Girls" class="girls-logo">
+        </div>
     </div>
+
+
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="contact-section">
+                <div class="email-group">
+                    <h4>Contact Siblings</h4>
+                    <p><a href="mailto:siblingsscomedy@gmail.com">siblingsscomedy@gmail.com</a></p>
+                </div>
+
+                <div class="email-group">
+                    <h4>Siblings Management</h4>
+                    <p><a href="mailto:hannah@intertalentgroup.com">hannah@intertalentgroup.com</a></p>
+                    <p><a href="mailto:izzy@intertalentgroup.com">izzy@intertalentgroup.com</a></p>
+                </div>
+
+                <div class="email-group">
+                    <h4>For live shows</h4>
+                    <p><a href="mailto:maddy@impatientproductionsuk.com">maddy@impatientproductionsuk.com</a></p>
+                </div>
+            </div>
+
+            <div class="social-links">
+                <h4>Follow Siblings</h4>
+                <div class="social-buttons">
+                    <a href="https://www.tiktok.com/@siblingsscomedy" target="_blank"
+                        class="social-btn tiktok">TikTok</a>
+                    <a href="https://www.instagram.com/siblingscomedy/?hl=en" target="_blank"
+                        class="social-btn instagram">Instagram</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="js/scroll.js"></script>
 </body>
 
 </html>
