Update index.html and CSS for about and reviews sections; swap navigation links and enhance about section with new content and background image.

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                     <a href="#home" class="desktop-nav-link">Home</a>
                 </li>
                 <li class="desktop-nav-item">
-                    <a href="#about" class="desktop-nav-link">Who are Siblings</a>
+                    <a href="#reviews" class="desktop-nav-link">Reviews & Quotes</a>
                 </li>
                 <li class="desktop-nav-item">
-                    <a href="#reviews" class="desktop-nav-link">Reviews & Quotes</a>
+                    <a href="#about" class="desktop-nav-link">About</a>
                 </li>
             </ul>
         </div>
@@ -93,10 +93,10 @@
                     <a href="#home" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#about" class="nav-link">Who are Siblings</a>
+                    <a href="#reviews" class="nav-link">Reviews & Quotes</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#reviews" class="nav-link">Reviews & Quotes</a>
+                    <a href="#about" class="nav-link">About</a>
                 </li>
             </ul>
         </div>
@@ -122,17 +122,6 @@
             <img src="img/girls.png" alt="Siblings Girls" class="girls-logo">
         </div>
     </div>
-
-    <section class="about-section" id="about">
-        <div class="about-content">
-            <h2>Who are Siblings</h2>
-            <p>Siblings is an award winning, critically acclaimed cacophony of character and sketch made up of comedians
-                and IRL sisters Maddy & Marina Bye. Marina studied at Guildhall School of Music and Drama whilst Maddy
-                studied at the same time at the Parisian Clown School Ecole Philippe Gaulier. Together, they make
-                something ridiculous.</p>
-        </div>
-    </section>
-
     <section class="reviews-section" id="reviews">
         <h2 class="reviews-main-heading">Reviews & Quotes</h2>
         <div class="reviews-content">
@@ -250,6 +239,45 @@
             </div>
         </div>
 
+    </section>
+    <section class="about-section" id="about">
+        <div class="about-content">
+            <h2>Who are Siblings</h2>
+            <p>
+                Siblings is an award winning, critically acclaimed cacophony of character and sketch made up of
+                comedians and IRL sisters Maddy & Marina Bye. Marina studied at Guildhall School of Music and Drama
+                whilst Maddy studied at the same time at the Parisian Clown School Ecole Philippe Gaulier. Together,
+                they make something ridiculous.
+            </p>
+            <p>
+                In the last 5 years they have performed across the UK in festivals and on the live circuit. They have
+                sold out 4 consecutive Edinburgh Fringe runs as well as a sold out extended run at Soho Theatre 2019. In
+                2020 The Guardian included them as one of ‘The Sisters who became ferociously funny comedy duos’. They
+                are the winners of Reviews Hub Best Show Of Brighton Fringe 2021 and in 2022 they were nominated for the
+                British Comedy Guide’s Comedian’s Choice Award.
+            </p>
+            <p>
+                They just finished their 2025 Edinburgh Fringe show ‘Dreamweavers’ which sold out the entire run,
+                received
+                rave reviews and will be on tour soon.
+            </p>
+            <p>
+
+                Marina has recently starred in Amazon Prime's ‘The Girlfriend’ as Pandora Henry as well as Rahel Kurc in
+                Disney+ / Hulu’s ‘We Were The Lucky Ones’. Marina also starred in ‘Bridget Jones: Mad About The Boy’ and
+                ‘Wonka’. She will soon be on our screens again in Channel 4’s ‘Big Mood’. She also won an OFFIE for Best
+
+                Supporting Actress in Ibsen’s ‘Lady From The Sea’ at the Coronet Theatre and was nominated for Best
+                Comedy
+                Actress in The Greenwich Film Festival for her role in ‘Role Play’
+            </p>
+            <p>
+                Maddy is also a live comedy producer and has led tours across the UK and internationally as well as
+                producing over 50 shows at the Edinburgh Fringe over the last 5 years and over 15 at Soho Theatre. She
+                has starred in various short films including My Best Friends Recipe & Pulped.
+            </p>
+            <img src="img/about/foreground.png" alt="Marina & Marina conjoined" class="about-img">
+        </div>
     </section>
 
     <footer class="footer" id="contact">
