Update navigation links in index.html to reflect new section titles; change 'About' to 'Who are Siblings', 'Reviews & Quotes' to 'Reviews', and 'Gallery' to 'Gallery'.

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                     <a href="#home" class="desktop-nav-link">Home</a>
                 </li>
                 <li class="desktop-nav-item">
-                    <a href="#about" class="desktop-nav-link">About</a>
+                    <a href="#reviews" class="desktop-nav-link">Reviews & Quotes</a>
+                </li>
+                <li class="desktop-nav-item">
+                    <a href="#about" class="desktop-nav-link">Who are Siblings</a>
                 </li>
                 <li class="desktop-nav-item">
                     <a href="#gallery" class="desktop-nav-link">Gallery</a>
-                </li>
-                <li class="desktop-nav-item">
-                    <a href="#reviews" class="desktop-nav-link">Reviews & Quotes</a>
                 </li>
             </ul>
         </div>
@@ -97,13 +97,13 @@
                     <a href="#home" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#about" class="nav-link">About</a>
+                    <a href="#reviews" class="nav-link">Reviews & Quotes</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#about" class="nav-link">Who are Siblings</a>
                 </li>
                 <li class="nav-item">
                     <a href="#gallery" class="nav-link">Gallery</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#reviews" class="nav-link">Reviews & Quotes</a>
                 </li>
             </ul>
         </div>
