--- a/index.html
+++ b/index.html
@@ -173,12 +173,7 @@
                             ★★★★ Marvyn Stutter Pick Of The Fringe
                         </a>
                     </p>
-                    <p class="review-rating">
-                        <a target="_blank"
-                            href="https://list.co.uk/news/siblings-dreamweavers-comedy-review-a-wonderful-anarchic-sketch-show-47110">
-                            ★★★★ The List
-                        </a>
-                    </p>
+
                     <p class="review-rating">
                         <a target="_blank"
                             href="https://list.co.uk/news/siblings-dreamweavers-comedy-review-a-wonderful-anarchic-sketch-show-47110">
@@ -240,6 +235,9 @@
                     <p class="review-quote">'These girls are batsh*t crazy and I love it' <span class="publication">-
                             Broadway Baby</span></p>
                     <p class="review-quote">'Wet Faced with laughter' <span class="publication">- Scotsman</span></p>
+
+
+
                     <img src="img/reviews/foreground.png" alt="Siblings Girls Hair" class="review-girls">
                 </div>
 
@@ -332,7 +330,7 @@
                 <div class="photo-item" data-src="img/photos/15.jpg" data-alt="Siblings Photo 15">
                     <img src="img/photos/15.jpg" alt="Siblings Photo 15" class="gallery-img">
                 </div>
-                <div class="photo-item" data-src="img/photos/16.jpg" data-alt="Siblings Photo 16">
+                <div class="photo-item hide16" data-src="img/photos/16.jpg" data-alt="Siblings Photo 16">
                     <img src="img/photos/16.jpg" alt="Siblings Photo 16" class="gallery-img">
                 </div>
             </div>
