--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
     <link rel="canonical" href="https://siblingscomedy.com">
 
     <link rel="icon" type="image/svg+xml" href="favicon.ico">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="css/hero.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/reviews.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/curtain.css">
     <link rel="stylesheet" href="css/text-effect.css">
     <link rel="stylesheet" href="css/gallery.css">
@@ -238,6 +244,7 @@
 
 
 
+                    <img src="img/reviews/foreground.png" alt="Siblings Girls Hair" class="review-girls-animated">
                     <img src="img/reviews/foreground.png" alt="Siblings Girls Hair" class="review-girls">
                 </div>
 
