Enhance index.html with review animation triggers and update gallery foreground styles; modify CSS for footer positioning and add new animated foreground class. Update scroll.js to handle gallery foreground animation on scroll.

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             ★★★★★ Ed Fringe Review 2
                         </a>
                     </p>
-                    <p class="review-rating">
+                    <p class="review-rating" id="trigger-review-animation">
                         <a target="_blank"
                             href="https://threeweeksedinburgh.com/article/siblings-dreamweavers-impatient-productions-in-association-with-intertalent-comedy-ltd/">
                             ★★★★★ Three Weeks
@@ -240,8 +240,7 @@
                             class="publication">Ed Fringe Review</span></p>
                     <p class="review-quote">'These girls are batsh*t crazy and I love it' <span class="publication">-
                             Broadway Baby</span></p>
-                    <p class="review-quote" id="trigger-review-animation">'Wet Faced with laughter' <span
-                            class="publication">- Scotsman</span></p>
+                    <p class="review-quote">'Wet Faced with laughter' <span class="publication">- Scotsman</span></p>
 
                     <img src="img/reviews/foreground.png" alt="Siblings Girls Hair" class="review-girls">
                 </div>
@@ -334,7 +333,8 @@
                 <div class="photo-item" data-src="img/photos/14.jpg" data-alt="Siblings Photo 14">
                     <img src="img/photos/thumbnails/14.jpg" alt="Siblings Photo 14" class="gallery-img">
                 </div>
-                <div class="photo-item" data-src="img/photos/15.jpg" data-alt="Siblings Photo 15">
+                <div id="trigger-gallery-animation" class="photo-item" data-src="img/photos/15.jpg"
+                    data-alt="Siblings Photo 15">
                     <img src="img/photos/thumbnails/15.jpg" alt="Siblings Photo 15" class="gallery-img">
                 </div>
                 <div class="photo-item hide16" data-src="img/photos/16.jpg" data-alt="Siblings Photo 16">
@@ -342,6 +342,7 @@
                 </div>
             </div>
             <img src="img/photos/foreground.png" alt="Siblings Foreground" class="gallery-foreground">
+            <img src="img/photos/foreground.png" alt="Siblings Foreground" class="gallery-foreground-animated">
         </div>
     </section>
 
