Refactor index.html to improve review animation triggers and restructure about section; update CSS transitions for smoother animations in about and gallery sections; enhance scroll.js to manage animation triggers based on viewport visibility.

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             ★★★★★ Ed Fringe Review 2
                         </a>
                     </p>
-                    <p class="review-rating" id="trigger-review-animation">
+                    <p class="review-rating">
                         <a target="_blank"
                             href="https://threeweeksedinburgh.com/article/siblings-dreamweavers-impatient-productions-in-association-with-intertalent-comedy-ltd/">
                             ★★★★★ Three Weeks
@@ -240,7 +240,8 @@
                             class="publication">Ed Fringe Review</span></p>
                     <p class="review-quote">'These girls are batsh*t crazy and I love it' <span class="publication">-
                             Broadway Baby</span></p>
-                    <p class="review-quote">'Wet Faced with laughter' <span class="publication">- Scotsman</span></p>
+                    <p class="review-quote">'Wet Faced with laughter' <span id="trigger-review-animation"
+                            class="publication">- Scotsman</span></p>
 
                     <img src="img/reviews/foreground.png" alt="Siblings Girls Hair" class="review-girls">
                 </div>
@@ -280,12 +281,15 @@
                 Comedy
                 Actress in The Greenwich Film Festival for her role in ‘Role Play’
             </p>
-            <p>
-                Maddy is also a live comedy producer and has led tours across the UK and internationally as well as
-                producing over 50 shows at the Edinburgh Fringe over the last 5 years and over 15 at Soho Theatre. She
-                has starred in various short films including My Best Friends <span id="trigger-about-animation">Recipe &
-                    Pulped.</span>
-            </p>
+            <span>
+                <p id="trigger-about-animation">
+                    Maddy is also a live comedy producer and has led tours across the UK and internationally as well as
+                    producing over 50 shows at the Edinburgh Fringe over the last 5 years and over 15 at Soho Theatre.
+                    She
+                    has starred in various short films including My Best Friends Recipe & Pulped.
+
+                </p>
+            </span>
             <img src="img/about/foreground.png" alt="Marina & Marina conjoined" class="about-img-animated">
             <img src="img/about/foreground.png" alt="Marina & Marina conjoined" class="about-img">
         </div>
