Update index.html to correct publication name for a review; modify CSS for gallery foreground z-index and pointer events; enhance scroll.js to simplify visibility checks for gallery animation triggers and improve logging for debugging.

--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
             <div class="reviews-column">
                 <div class="review-quotes">
                     <p class="review-quote">'My favorite Fringe Show' <span class="publication">The Observer</span></p>
-                    <p class="review-quote">'Rising Stars of British Comedy' <span class="publication">- Mail</span></p>
+                    <p class="review-quote">'Rising Stars of British Comedy' <span class="publication">- Mail on
+                            Sunday</span></p>
                     <p class="review-quote">'Ferociously Funny' <span class="publication">- The Guardian</span></p>
                     <p class="review-quote">'Grotesque' <span class="publication">Daily Mail</span></p>
                     <p class="review-quote">'A hoot' <span class="publication">The Telegraph</span></p>
@@ -337,7 +338,7 @@
                 <div class="photo-item" data-src="img/photos/14.jpg" data-alt="Siblings Photo 14">
                     <img src="img/photos/thumbnails/14.jpg" alt="Siblings Photo 14" class="gallery-img">
                 </div>
-                <div id="trigger-gallery-animation" class="photo-item" data-src="img/photos/15.jpg"
+                <div class="photo-item trigger-gallery-animation" data-src="img/photos/15.jpg"
                     data-alt="Siblings Photo 15">
                     <img src="img/photos/thumbnails/15.jpg" alt="Siblings Photo 15" class="gallery-img">
                 </div>
