--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
         <div class="hero-section" id="home">
             <img src="img/siblings-logo.png" alt="Siblings Logo" class="dancing-logo">
             <div class="show-buttons" id="shows">
-                <a href="https://brightondome.org/whats-on/LdY-siblings-dreamweavers/" target="_blank"
+                <!-- <a href="https://brightondome.org/whats-on/LdY-siblings-dreamweavers/" target="_blank"
                     class="show-btn brighton">
                     <h3>Brighton Comedy Festival</h3>
                     <p>October 24th 2025</p>
-                </a>
+                </a> -->
                 <a href="https://sohotheatre.com/events/siblings-dreamweavers/" target="_blank" class="show-btn soho">
                     <h3>Soho Theatre</h3>
                     <p>February 24-28</p>
